--- a/data_test.ipynb
+++ b/data_test.ipynb
@@ -20,7 +20,7 @@
    "execution_count": 2,
    "id": "72992a71",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -313,6 +313,14 @@
     "# Display cleaned_data DataFrame the modified data\n",
     "transposed_data.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dfffec7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
