--- a/ac/data_test.ipynb
+++ b/ac/data_test.ipynb
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2f902994",
+   "id": "2bee20e7",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9210794d",
+   "id": "c7752af2",
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4271192a",
+   "id": "bcdb26ee",
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ef0fab8c",
+   "id": "8720b2b1",
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c172df31",
+   "id": "15351057",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -939,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fce4b37c",
+   "id": "b71b8af9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6e75171d",
+   "id": "831436c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6e1586ed",
+   "id": "0af490c4",
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6351bfe8",
+   "id": "f16d4f88",
    "metadata": {},
    "outputs": [
     {
@@ -1069,8 +1069,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "93ae66b9",
+   "execution_count": 21,
+   "id": "c3d52c19",
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1246,7 @@
        "United States : natural gas                    1626790  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1298,16 +1298,16 @@
     "}\n",
     "\n",
     "# Create a DataFrame from the dictionary\n",
-    "sum_of_columns_df = pd.DataFrame(data)\n",
+    "energy_data_totals_df = pd.DataFrame(data)\n",
     "\n",
     "# Display the DataFrame\n",
-    "sum_of_columns_df.head()"
+    "energy_data_totals_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "1308ebd4",
+   "execution_count": 22,
+   "id": "cfc72bd3",
    "metadata": {},
    "outputs": [
     {
@@ -1327,13 +1327,13 @@
        "Name: United States : all fuels (utility-scale), dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum_of_columns_df.iloc[0]"
+    "energy_data_totals_df.iloc[0]"
    ]
   },
   {
@@ -1755,7 +1755,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "522e38e3",
+   "id": "14ec3d94",
    "metadata": {
     "scrolled": true
    },
@@ -1952,11 +1952,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "08a259fc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Export the 'energy_data_totals_df' and the 'grouped_renewables_df' as CSV files\n",
+    "energy_data_totals_df.to_csv('net_energy_generation_totals.csv', sep=',', index=False, encoding='utf-8')\n",
+    "grouped_renewables_df.to_csv('renewables_energy_annual_consumption.csv', sep=',', index=False, encoding='utf-8')"
+   ]
   },
   {
    "cell_type": "code",
