Added index to the Net_energy_generation_totals.csv

--- a/ac/data_test.ipynb
+++ b/ac/data_test.ipynb
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c06fbe10",
+   "id": "f7292a9c",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b56c8d2f",
+   "id": "a6cc1353",
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1e0c619c",
+   "id": "5956d196",
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5096775f",
+   "id": "796a4021",
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a7df4428",
+   "id": "ee411606",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -939,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "660ff8b0",
+   "id": "52c23e0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4b92944c",
+   "id": "ff27dd1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a6da7701",
+   "id": "aca7f45d",
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6a32e8d4",
+   "id": "c82eb82a",
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4f0c8931",
+   "id": "a87e1e1d",
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1307,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9031bc56",
+   "id": "7ac20018",
    "metadata": {},
    "outputs": [
     {
@@ -1755,7 +1755,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "03993b0d",
+   "id": "e57c0199",
    "metadata": {
     "scrolled": true
    },
@@ -1952,13 +1952,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "08a259fc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export the 'energy_data_totals_df' and the 'grouped_renewables_df' as CSV files\n",
-    "energy_data_totals_df.to_csv('Net_energy_generation_totals.csv', sep=',', index=False, encoding='utf-8')\n",
+    "energy_data_totals_df.to_csv('Net_energy_generation_totals.csv', sep=',', index=True, encoding='utf-8')\n",
     "grouped_renewables_df.to_csv('renewables_energy_annual_consumption.csv', sep=',', index=False, encoding='utf-8')"
    ]
   },
