Removed one line of code

--- a/ac/renewable_energy.ipynb
+++ b/ac/renewable_energy.ipynb
@@ -1493,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a58c09f5",
+   "id": "f34271b0",
    "metadata": {
     "scrolled": true
    },
@@ -1706,7 +1706,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "06f50115",
+   "id": "4e8ed175",
    "metadata": {},
    "outputs": [
     {
@@ -1917,7 +1917,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2ca97ea8",
+   "id": "905f1488",
    "metadata": {},
    "outputs": [
     {
@@ -2128,7 +2128,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6f7f70af",
+   "id": "5a23ae3a",
    "metadata": {},
    "outputs": [
     {
@@ -2344,8 +2344,7 @@
    "outputs": [],
    "source": [
     "# Export the 'energy_data_totals_df' and the 'grouped_renewables_df' as CSV files\n",
-    "all_renewables.to_csv('renewable_energy_2011_2020.csv', sep=',', index=True, encoding='utf-8')\n",
-    "# grouped_renewables_df.to_csv('renewables_energy_annual_consumption.csv', sep=',', index=False, encoding='utf-8')"
+    "all_renewables.to_csv('renewable_energy_2011_2020.csv', sep=',', index=True, encoding='utf-8')\n"
    ]
   },
   {
