Reduced dimensions in machine learning data set

--- a/Artien/State Cancer + 2021 Averages.ipynb
+++ b/Artien/State Cancer + 2021 Averages.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b0ddbcd1",
+   "id": "cf78dcf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "20f4000f",
+   "id": "899733da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b7b3432d",
+   "id": "b8ed2415",
    "metadata": {
     "scrolled": true
    },
@@ -1612,7 +1612,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "97c7fa43",
+   "id": "1e5eee85",
    "metadata": {
     "scrolled": true
    },
@@ -1838,7 +1838,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c08102bd",
+   "id": "c69b2d88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1850,7 +1850,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3d2ae17c",
+   "id": "ff9b06eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1861,7 +1861,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c864dc0e",
+   "id": "dd26cb34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1871,7 +1871,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "39acf949",
+   "id": "8dd6be83",
    "metadata": {
     "scrolled": true
    },
@@ -3460,7 +3460,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "95389876",
+   "id": "37338955",
    "metadata": {},
    "outputs": [
     {
@@ -3488,7 +3488,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d5bbd3f7",
+   "id": "505d2c92",
    "metadata": {},
    "outputs": [
     {
@@ -3888,7 +3888,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "10228ba0",
+   "id": "0a020ae9",
    "metadata": {},
    "outputs": [
     {
@@ -4058,7 +4058,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "de3de167",
+   "id": "ad27c52c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4068,7 +4068,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3b7e6df6",
+   "id": "143607ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4078,7 +4078,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c9726b21",
+   "id": "b29e1237",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4088,7 +4088,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "876ab90e",
+   "id": "c6025d6f",
    "metadata": {},
    "outputs": [
     {
@@ -4502,7 +4502,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2243d4c4",
+   "id": "4cc696ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4512,7 +4512,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f706bf56",
+   "id": "9ecd86c8",
    "metadata": {},
    "outputs": [
     {
@@ -4873,7 +4873,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "54c7af11",
+   "id": "48a039c4",
    "metadata": {
     "scrolled": true
    },
@@ -5238,7 +5238,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "34bb4ae5",
+   "id": "591572e7",
    "metadata": {},
    "outputs": [
     {
@@ -5325,7 +5325,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "af29e1c3",
+   "id": "76671ac3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5335,7 +5335,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c25203a0",
+   "id": "ca9bc99d",
    "metadata": {
     "scrolled": true
    },
@@ -5561,7 +5561,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "9917878e",
+   "id": "4b2bd1d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5571,7 +5571,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a2a4920d",
+   "id": "0dedcecf",
    "metadata": {},
    "outputs": [
     {
@@ -5795,7 +5795,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "0d156e38",
+   "id": "60442723",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5810,7 +5810,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "3743c018",
+   "id": "686cdf57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5827,7 +5827,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "9e91f201",
+   "id": "b3bcfbfd",
    "metadata": {},
    "outputs": [
     {
@@ -6053,7 +6053,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "cfeb25be",
+   "id": "cfe98332",
    "metadata": {},
    "outputs": [
     {
@@ -6277,7 +6277,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "ef34b561",
+   "id": "7eddfde3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6316,7 +6316,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "290efa36",
+   "id": "db1a9cb7",
    "metadata": {},
    "outputs": [
     {
@@ -6388,7 +6388,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7f1a32d3",
+   "id": "e02cb824",
    "metadata": {},
    "outputs": [
     {
@@ -6460,7 +6460,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "2aa0f99e",
+   "id": "98643722",
    "metadata": {
     "scrolled": true
    },
@@ -6688,7 +6688,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "674e4dfe",
+   "id": "3bfc3a33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6720,7 +6720,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "2b721c6f",
+   "id": "47ad7210",
    "metadata": {},
    "outputs": [
     {
@@ -6792,7 +6792,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "cedb9e09",
+   "id": "56e69040",
    "metadata": {},
    "outputs": [
     {
@@ -6864,7 +6864,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "1806a19f",
+   "id": "a3dbc121",
    "metadata": {
     "scrolled": true
    },
@@ -7092,7 +7092,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "7b801ef1",
+   "id": "f3c87c12",
    "metadata": {},
    "outputs": [
     {
@@ -7316,7 +7316,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "081f19d2",
+   "id": "25ebf871",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7326,7 +7326,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "2be57339",
+   "id": "f7cb66ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7336,7 +7336,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "93e27ddd",
+   "id": "6298bd7d",
    "metadata": {},
    "outputs": [
     {
@@ -8923,7 +8923,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "b70d8051",
+   "id": "74e3ae7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8933,7 +8933,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "9b1a03d0",
+   "id": "ea73a436",
    "metadata": {},
    "outputs": [
     {
@@ -9163,11 +9163,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d402d179",
+   "execution_count": 46,
+   "id": "89641bc4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "refined_machine_learning_data.to_csv('Machine Learning Dataset-Cancer&Energy.csv')"
+   ]
   }
  ],
  "metadata": {
