cancer-energy machine learning model added

--- a/claire/cancer_visualization_wYearPop.ipynb
+++ b/claire/cancer_visualization_wYearPop.ipynb
@@ -47,7 +47,7 @@
         "# Set seaborn style\n",
         "sns.set_style(\"whitegrid\")\n",
         "\n",
-        "# Plotting a box plot for all states with cool effects\n",
+        "# Plotting\n",
         "plt.figure(figsize=(10, 6))\n",
         "sns.boxplot(data=all_sites_percentage, palette=\"YlOrRd\", linewidth=2, showfliers=True)\n",
         "plt.title('Rates of All Cancer Sites - United States', fontsize=15, fontweight='bold')\n",
@@ -65,7 +65,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 607
+          "height": 577
         },
         "id": "pusOlrQ3IJPD",
         "outputId": "f7ab66aa-fc07-4e70-dc1d-791d3aa73880"
@@ -224,7 +224,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 551
+          "height": 526
         },
         "id": "xO8jULArIEt7",
         "outputId": "963ad9c9-af8b-42c0-82d0-d7d189c89e3f"
@@ -275,7 +275,7 @@
         "# Set seaborn style\n",
         "sns.set_style(\"whitegrid\")\n",
         "\n",
-        "# Plotting a box plot for all states with cool effects\n",
+        "# Plotting\n",
         "plt.figure(figsize=(10, 6))\n",
         "sns.boxplot(data=lung_sites_percentage, palette=\"BuPu\", linewidth=2, showfliers=True)\n",
         "plt.title('Rates of Lung/Bronchus Cancer Sites - United States', fontsize=15, fontweight='bold')\n",
@@ -293,7 +293,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 607
+          "height": 577
         },
         "id": "AqFPuZQpIkIr",
         "outputId": "5c1a915b-4b01-4ed5-8941-52c7996a1395"
@@ -453,7 +453,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 551
+          "height": 526
         },
         "id": "7RGpDSC-Iuqg",
         "outputId": "93eefc32-5394-4dc3-bbbc-d1b36f2a73b6"
