Modified the machine learning data set

--- a/Artien/State Cancer + 2021 Averages.ipynb
+++ b/Artien/State Cancer + 2021 Averages.ipynb
@@ -7315,7 +7315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "25ebf871",
    "metadata": {},
    "outputs": [],
@@ -7325,7 +7325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "f7cb66ff",
    "metadata": {},
    "outputs": [],
@@ -7335,7 +7335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "id": "6298bd7d",
    "metadata": {},
    "outputs": [
@@ -8911,7 +8911,7 @@
        "[52 rows x 166 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8922,7 +8922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 40,
    "id": "74e3ae7c",
    "metadata": {},
    "outputs": [],
@@ -8932,7 +8932,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 41,
+   "id": "fd0e6d90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cancer_changes = []\n",
+    "\n",
+    "for x in range(len(refined_machine_learning_data)):\n",
+    "    changes = round(refined_machine_learning_data['2020_LungBronchus_perCapita'][x] - refined_machine_learning_data['2011_LungBronchus_perCapita'][x],6)\n",
+    "    cancer_changes.append(changes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "6aae2d74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "refined_machine_learning_data['Change from 2011 to 2020 (percapita)'] = cancer_changes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "ea73a436",
    "metadata": {},
    "outputs": [
@@ -8968,7 +8992,6 @@
        "      <th>2018(C)</th>\n",
        "      <th>2019(C)</th>\n",
        "      <th>...</th>\n",
-       "      <th>2019_Population</th>\n",
        "      <th>2020_LungBronchus</th>\n",
        "      <th>2020_LungBronchus_perCapita</th>\n",
        "      <th>2020_Population</th>\n",
@@ -8978,6 +9001,7 @@
        "      <th>2011-2020 allsites/capita AVG</th>\n",
        "      <th>2011-2020 lungBronchus/capita AVG</th>\n",
        "      <th>Lung/Bronchus_Classifer</th>\n",
+       "      <th>Change from 2011 to 2020 (percapita)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -8994,7 +9018,6 @@
        "      <td>17325</td>\n",
        "      <td>17620</td>\n",
        "      <td>...</td>\n",
-       "      <td>731545</td>\n",
        "      <td>400</td>\n",
        "      <td>0.000546</td>\n",
        "      <td>732964.0</td>\n",
@@ -9004,6 +9027,7 @@
        "      <td>0.004628</td>\n",
        "      <td>0.000591</td>\n",
        "      <td>0</td>\n",
+       "      <td>0.000020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -9018,7 +9042,6 @@
        "      <td>377152</td>\n",
        "      <td>317180</td>\n",
        "      <td>...</td>\n",
-       "      <td>4903185</td>\n",
        "      <td>4230</td>\n",
        "      <td>0.000841</td>\n",
        "      <td>5031864.0</td>\n",
@@ -9028,6 +9051,7 @@
        "      <td>0.005554</td>\n",
        "      <td>0.000867</td>\n",
        "      <td>1</td>\n",
+       "      <td>-0.000043</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -9042,7 +9066,6 @@
        "      <td>304145</td>\n",
        "      <td>239798</td>\n",
        "      <td>...</td>\n",
-       "      <td>3017804</td>\n",
        "      <td>2760</td>\n",
        "      <td>0.000916</td>\n",
        "      <td>3014348.0</td>\n",
@@ -9052,6 +9075,7 @@
        "      <td>0.005473</td>\n",
        "      <td>0.000898</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.000011</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -9066,7 +9090,6 @@
        "      <td>331492</td>\n",
        "      <td>257727</td>\n",
        "      <td>...</td>\n",
-       "      <td>7278717</td>\n",
        "      <td>4200</td>\n",
        "      <td>0.000584</td>\n",
        "      <td>7186683.0</td>\n",
@@ -9076,6 +9099,7 @@
        "      <td>0.004939</td>\n",
        "      <td>0.000595</td>\n",
        "      <td>1</td>\n",
+       "      <td>-0.000006</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -9090,7 +9114,6 @@
        "      <td>33256</td>\n",
        "      <td>30886</td>\n",
        "      <td>...</td>\n",
-       "      <td>39512223</td>\n",
        "      <td>18040</td>\n",
        "      <td>0.000457</td>\n",
        "      <td>39503200.0</td>\n",
@@ -9100,10 +9123,11 @@
        "      <td>0.004456</td>\n",
        "      <td>0.000473</td>\n",
        "      <td>0</td>\n",
+       "      <td>-0.000012</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 138 columns</p>\n",
+       "<p>5 rows × 139 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -9114,12 +9138,12 @@
        "3                 AZ   459909   420570   454865   447849   385822   323878   \n",
        "4                 CA    55264    43832    38151    39486    30967    32077   \n",
        "\n",
-       "   2017(C)  2018(C)  2019(C)  ...  2019_Population  2020_LungBronchus  \\\n",
-       "0    16376    17325    17620  ...           731545                400   \n",
-       "1   378890   377152   317180  ...          4903185               4230   \n",
-       "2   267591   304145   239798  ...          3017804               2760   \n",
-       "3   334512   331492   257727  ...          7278717               4200   \n",
-       "4    33663    33256    30886  ...         39512223              18040   \n",
+       "   2017(C)  2018(C)  2019(C)  ...  2020_LungBronchus  \\\n",
+       "0    16376    17325    17620  ...                400   \n",
+       "1   378890   377152   317180  ...               4230   \n",
+       "2   267591   304145   239798  ...               2760   \n",
+       "3   334512   331492   257727  ...               4200   \n",
+       "4    33663    33256    30886  ...              18040   \n",
        "\n",
        "   2020_LungBronchus_perCapita  2020_Population  2021 Lung & Bronchus  \\\n",
        "0                     0.000546         732964.0                   370   \n",
@@ -9142,17 +9166,17 @@
        "3                       0.004939                           0.000595   \n",
        "4                       0.004456                           0.000473   \n",
        "\n",
-       "   Lung/Bronchus_Classifer  \n",
-       "0                        0  \n",
-       "1                        1  \n",
-       "2                        1  \n",
-       "3                        1  \n",
-       "4                        0  \n",
+       "   Lung/Bronchus_Classifer  Change from 2011 to 2020 (percapita)  \n",
+       "0                        0                              0.000020  \n",
+       "1                        1                             -0.000043  \n",
+       "2                        1                              0.000011  \n",
+       "3                        1                             -0.000006  \n",
+       "4                        0                             -0.000012  \n",
        "\n",
-       "[5 rows x 138 columns]"
+       "[5 rows x 139 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9163,7 +9187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "id": "89641bc4",
    "metadata": {},
    "outputs": [],
