Updated energy_weather_severity_df to only displace the severity for the Total Renewables (TR) energy consumption rates.

--- a/ac/visuals_combined_and_renewable_energy.ipynb
+++ b/ac/visuals_combined_and_renewable_energy.ipynb
@@ -5318,7 +5318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "id": "03376c33",
    "metadata": {},
    "outputs": [
@@ -5538,7 +5538,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5557,17 +5557,9 @@
     "    result_dict[year_col + '-Fossil_Divided'] = fossil_divided\n",
     "    result_dict[year_col + '-TR_Divided'] = tr_divided\n",
     "    \n",
-    "    # Calculate 'Severity' for TR \n",
-    "#     fossil_severity = []\n",
+    "    # Calculate 'Severity' for TR energy consumption\n",
     "    tr_severity = []\n",
     "    for tr_value in tr_divided:\n",
-    "#         if fossil_value < 0.25:\n",
-    "#             fossil_severity.append('0')\n",
-    "#         elif 0.26 <= fossil_value <= 0.50:\n",
-    "#             fossil_severity.append('1')\n",
-    "#         else:\n",
-    "#             fossil_severity.append('2')\n",
-    "        \n",
     "        if tr_value < 0.25:\n",
     "            tr_severity.append('0')\n",
     "        elif 0.26 <= tr_value <= 0.50:\n",
@@ -5575,7 +5567,6 @@
     "        else:\n",
     "            tr_severity.append('2')\n",
     "            \n",
-    "#     result_dict[year_col + '-Fossil_Severity'] = fossil_severity\n",
     "    result_dict[year_col + '-TR_Severity'] = tr_severity\n",
     "\n",
     "# Create a new DataFrame from the dictionary\n",
@@ -5586,7 +5577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 54,
    "id": "7aca0e46",
    "metadata": {
     "scrolled": true
@@ -5846,7 +5837,7 @@
        "[5 rows x 56 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5874,7 +5865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "id": "aea6b04a",
    "metadata": {},
    "outputs": [
@@ -5910,15 +5901,15 @@
        "      <th>daylight_hr_avg_2014</th>\n",
        "      <th>daylight_hr_avg_2015</th>\n",
        "      <th>...</th>\n",
-       "      <th>2018-Fossil_Severity</th>\n",
+       "      <th>2017-TR_Severity</th>\n",
+       "      <th>2018-Fossil_Divided</th>\n",
+       "      <th>2018-TR_Divided</th>\n",
        "      <th>2018-TR_Severity</th>\n",
        "      <th>2019-Fossil_Divided</th>\n",
        "      <th>2019-TR_Divided</th>\n",
-       "      <th>2019-Fossil_Severity</th>\n",
        "      <th>2019-TR_Severity</th>\n",
        "      <th>2020-Fossil_Divided</th>\n",
        "      <th>2020-TR_Divided</th>\n",
-       "      <th>2020-Fossil_Severity</th>\n",
        "      <th>2020-TR_Severity</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -5936,15 +5927,15 @@
        "      <td>12.170877</td>\n",
        "      <td>12.170845</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.408463</td>\n",
+       "      <td>0.591537</td>\n",
        "      <td>2</td>\n",
        "      <td>0.407242</td>\n",
        "      <td>0.592758</td>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>0.387801</td>\n",
        "      <td>0.612199</td>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -5960,15 +5951,15 @@
        "      <td>12.399296</td>\n",
        "      <td>12.399188</td>\n",
        "      <td>...</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.698536</td>\n",
+       "      <td>0.301464</td>\n",
        "      <td>1</td>\n",
        "      <td>0.711359</td>\n",
        "      <td>0.288641</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0.706481</td>\n",
        "      <td>0.293519</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -5984,15 +5975,15 @@
        "      <td>12.173663</td>\n",
        "      <td>12.173630</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.478514</td>\n",
+       "      <td>0.521486</td>\n",
        "      <td>2</td>\n",
        "      <td>0.490770</td>\n",
        "      <td>0.509230</td>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>0.465072</td>\n",
        "      <td>0.534928</td>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -6008,15 +5999,15 @@
        "      <td>12.177709</td>\n",
        "      <td>12.177674</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.475234</td>\n",
+       "      <td>0.524766</td>\n",
        "      <td>2</td>\n",
        "      <td>0.450444</td>\n",
        "      <td>0.549556</td>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>0.450958</td>\n",
        "      <td>0.549042</td>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -6032,20 +6023,20 @@
        "      <td>12.181503</td>\n",
        "      <td>12.181466</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.324942</td>\n",
+       "      <td>0.675058</td>\n",
        "      <td>2</td>\n",
        "      <td>0.297403</td>\n",
        "      <td>0.702597</td>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>0.288082</td>\n",
        "      <td>0.711918</td>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 95 columns</p>\n",
+       "<p>5 rows × 85 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -6063,38 +6054,38 @@
        "AR             12.177714             12.174804             12.177804   \n",
        "CA             12.181508             12.178467             12.181603   \n",
        "\n",
-       "    daylight_hr_avg_2014  daylight_hr_avg_2015  ...  2018-Fossil_Severity  \\\n",
-       "AL             12.170877             12.170845  ...                     1   \n",
-       "AK             12.399296             12.399188  ...                     2   \n",
-       "AZ             12.173663             12.173630  ...                     1   \n",
-       "AR             12.177709             12.177674  ...                     1   \n",
-       "CA             12.181503             12.181466  ...                     1   \n",
+       "    daylight_hr_avg_2014  daylight_hr_avg_2015  ...  2017-TR_Severity  \\\n",
+       "AL             12.170877             12.170845  ...                 2   \n",
+       "AK             12.399296             12.399188  ...                 1   \n",
+       "AZ             12.173663             12.173630  ...                 2   \n",
+       "AR             12.177709             12.177674  ...                 2   \n",
+       "CA             12.181503             12.181466  ...                 2   \n",
        "\n",
-       "    2018-TR_Severity  2019-Fossil_Divided  2019-TR_Divided  \\\n",
-       "AL                 2             0.407242         0.592758   \n",
-       "AK                 1             0.711359         0.288641   \n",
-       "AZ                 2             0.490770         0.509230   \n",
-       "AR                 2             0.450444         0.549556   \n",
-       "CA                 2             0.297403         0.702597   \n",
+       "    2018-Fossil_Divided  2018-TR_Divided  2018-TR_Severity  \\\n",
+       "AL             0.408463         0.591537                 2   \n",
+       "AK             0.698536         0.301464                 1   \n",
+       "AZ             0.478514         0.521486                 2   \n",
+       "AR             0.475234         0.524766                 2   \n",
+       "CA             0.324942         0.675058                 2   \n",
        "\n",
-       "    2019-Fossil_Severity  2019-TR_Severity  2020-Fossil_Divided  \\\n",
-       "AL                     1                 2             0.387801   \n",
-       "AK                     2                 1             0.706481   \n",
-       "AZ                     1                 2             0.465072   \n",
-       "AR                     1                 2             0.450958   \n",
-       "CA                     1                 2             0.288082   \n",
+       "    2019-Fossil_Divided  2019-TR_Divided  2019-TR_Severity  \\\n",
+       "AL             0.407242         0.592758                 2   \n",
+       "AK             0.711359         0.288641                 1   \n",
+       "AZ             0.490770         0.509230                 2   \n",
+       "AR             0.450444         0.549556                 2   \n",
+       "CA             0.297403         0.702597                 2   \n",
        "\n",
-       "    2020-TR_Divided  2020-Fossil_Severity  2020-TR_Severity  \n",
-       "AL         0.612199                     1                 2  \n",
-       "AK         0.293519                     2                 1  \n",
-       "AZ         0.534928                     1                 2  \n",
-       "AR         0.549042                     1                 2  \n",
-       "CA         0.711918                     1                 2  \n",
+       "    2020-Fossil_Divided  2020-TR_Divided  2020-TR_Severity  \n",
+       "AL             0.387801         0.612199                 2  \n",
+       "AK             0.706481         0.293519                 1  \n",
+       "AZ             0.465072         0.534928                 2  \n",
+       "AR             0.450958         0.549042                 2  \n",
+       "CA             0.288082         0.711918                 2  \n",
        "\n",
-       "[5 rows x 95 columns]"
+       "[5 rows x 85 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6119,7 +6110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 56,
    "id": "7101ab7f",
    "metadata": {},
    "outputs": [],
