--- a/ac/visuals_combined_and_renewable_energy.ipynb
+++ b/ac/visuals_combined_and_renewable_energy.ipynb
@@ -2550,15 +2550,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -2587,10 +2578,7 @@
     "plt.savefig(\"energy_by_types_visuals/annual_total_fossil_fuel_consumption_top_10_US.png\", format=\"png\", bbox_inches='tight')\n",
     "\n",
     "# Display the plot\n",
-    "plt.show()\n",
-    "\n",
-    "# Export plots as png files\n",
-    "plt.savefig(\"energy_by_types_visuals/annual_total_fossil_fuel_consumption_top_10_US.png\")"
+    "plt.show()\n"
    ]
   },
   {
@@ -4736,17 +4724,9 @@
     "# Select the top 10 states with the highest values for '2020(W)'\n",
     "top_10_states = sorted_wind_energy.tail(10)\n",
     "\n",
-    "# Select the bottom 5 states with the lowest values for '2020(W)'\n",
-    "# bottom_5_states = sorted_wind_energy.head(5)\n",
-    "\n",
     "# Plot the data for the top 10 states\n",
     "for index, row in top_10_states.iterrows():\n",
     "    row.plot(label=index)\n",
-    "\n",
-    "# Plot the data for the bottom 5 states\n",
-    "# for index, row in bottom_5_states.iterrows():\n",
-    "#     row.plot(label=index, color='gray')\n",
-    "\n",
     "    \n",
     "# Add legend and display the plot\n",
     "plt.xlabel('Years')\n",
@@ -6097,14 +6077,6 @@
     "\n",
     "energy_weather_severity_df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e1f886d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
